# ask-my-resume

./: .gitignore  ingest.py  main.py  pyproject.toml  requirements.txt
ingestion_pipeline/: data_ingestion.py  embeddings.py
retrieval_pipeline/: retrieval.py
